Bug 454885 - Date separators showing multiple times on the same day
Summary: Date separators showing multiple times on the same day
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-05 15:38 UTC by Jan Bidler
Modified: 2022-10-07 13:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Multiple Date Seperators (29.24 KB, image/png)
2022-06-05 15:38 UTC, Jan Bidler
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Bidler 2022-06-05 15:38:09 UTC
Created attachment 149481 [details]
Multiple Date Seperators

SUMMARY
The date separator somehow manages to show multiple times on same day.


STEPS TO REPRODUCE
1.  Have Neochat open in a room and on focus
2. Minimize NeoChat and let someone type in the room
3. Bring neochat to focus again and scroll up/down to get rid of the "Last read" pop up
4. Repeat step 2 and 4 how often you want to.

OBSERVED RESULT
There are multiple date separators. (See attachment)

EXPECTED RESULT
When the "last read" pop up disappears, the date separator should disappear as well.

SOFTWARE/OS VERSIONS
Windows: 10 21H1
Neochat version: 22.04
KDE Frameworks Version: 5.94.0
Qt Version: 5.15.2
Comment 1 Bug Janitor Service 2022-10-06 16:57:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/548
Comment 2 James Graham 2022-10-07 13:32:09 UTC
Git commit 7cfc0e24e243e8108ab5f3b78db7345f4cb69dd0 by James Graham.
Committed on 07/10/2022 at 13:32.
Pushed by nvrwhere into branch 'master'.

Fix Section After Read Marker Removal

After the readmarker is removed it leaves a gap in the indexs until the model is refreshed.
Add check to ignore the gap for the purpose of show author and show section roles.

Closes network/neochat#295

M  +8    -2    src/messageeventmodel.cpp

https://invent.kde.org/network/neochat/commit/7cfc0e24e243e8108ab5f3b78db7345f4cb69dd0